update demo-micro git repo

--- a/enviro/aplicaciones/demo-micro-accounts/demo-micro-accounts-dev.yml
+++ b/enviro/aplicaciones/demo-micro-accounts/demo-micro-accounts-dev.yml
@@ -1,7 +1,7 @@
 server:
   port: 8001
 variables:
-  message: hello from config server local repo actualitzat v2 asdfasd
+  message: hello from config server git repo actualitzat git push!!
 absis:
   cics:
     url: http://cics-micro-server-1-dev.tst.int.srv.caixabank.com
