--- a/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
+++ b/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
@@ -1,7 +1,8 @@
 server:
+
   port: 9000
 variables:
-  message: hello spring from config server actuator refresh!
+  message: hello spring actuator refresh v2!
   
 logging:
   config: classpath:logback-standalone.xml
