--- a/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
+++ b/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
@@ -2,7 +2,7 @@ server:
 
   port: 9000
 variables:
-  message: <html><body> <h1> HOLA SPRING FROM CONFIG-SERVER !!</h1> <h1> REMOTECONFIGSERVERREPO/ENVIRO/APLICACIONES/HELLO-SPRING/APPLICATION.YML  </h2> </body> </html>
+  message: <html><body> <h1>ALICIA GUAPA</h1> <h1> </body> </html>
 
 logging:
   config: classpath:logback-standalone.xml
