--- a/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
+++ b/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
@@ -2,7 +2,7 @@ server:
 
   port: 9000
 variables:
-  message: <html><body> <h1> HOLA SPRING FROM CONFIG-SERVER !!</h1> <h1> REMOTECONFIGSERVERREPO/ENVIRO/APLICACIONES/HELLO-SPRING/APPLICATION.YML  </h2> </body> </html>
+  message: <html><body> <h1> HOLA SPRING FROM CONFIG-SERVER !!</h1> <h2>REMOTECONFIGSERVERREPO/ENVIRO/APLICACIONES/HELLO-SPRING/APPLICATION.YML</h2> <img class="image" width="195" height="195" src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082017/untitled-1_160.png?itok=XxGjXl_p" alt="Logo of everis NTT DATA">  </body> </html>
 
 logging:
   config: classpath:logback-standalone.xml
