--- a/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
+++ b/enviro/aplicaciones/hello-spring/hello-spring-dev.yml
@@ -1,8 +1,9 @@
-server:
-
-  port: 9000
-variables:
-  message: <html><body> <h1> HOLA SPRING FROM CONFIG-SERVER !!</h1> <h2>REMOTECONFIGSERVERREPO/ENVIRO/APLICACIONES/HELLO-SPRING/APPLICATION.YML</h2> <img class="image" width="195" height="195" src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082017/untitled-1_160.png?itok=XxGjXl_p" alt="Logo of everis NTT DATA">  </body> </html>
-
-logging:
-  config: classpath:logback-standalone.xml
+server.port=9000
+management.security.enabled=false
+variables.message=<html><body> <h1> HOLA SPRING FROM CONFIG-SERVER.</h1> <h2>REMOTECONFIGSERVERREPO/ENVIRO/APLICACIONES/HELLO-SPRING/APPLICATION.YML</h2> <img class="image" width="195" height="195" src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082017/untitled-1_160.png?itok=XxGjXl_p" alt="Logo of everis NTT DATA">  </body> </html>
+logging.config=classpath:logback-standalone.xml
+  
+spring.rabbitmq.host=http://35.240.5.223
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
